--- a/data/interfaces/preferences.ui
+++ b/data/interfaces/preferences.ui
@@ -207,43 +207,61 @@ You can set the application's Dbus level to &lt;u&gt;System&lt;/u&gt; if you wan
           <object class="AdwPreferencesGroup">
             <child>
               <object class="AdwSwitchRow" id="proxy_clean_switch">
-                <property name="subtitle">Clean method call through proxy</property>
+                <property name="subtitle" translatable="yes" context="preference">Clean method call through proxy</property>
                 <property name="title" translatable="yes" context="preference">Clean</property>
               </object>
             </child>
             <child>
               <object class="AdwSwitchRow" id="proxy_freeze_switch">
-                <property name="subtitle">&lt;b&gt;Freeze&lt;/b&gt; method call through proxy</property>
+                <property name="subtitle" translatable="yes" context="preference">&lt;b&gt;Freeze&lt;/b&gt; method call through proxy</property>
                 <property name="title" translatable="yes" context="preference">Freeze</property>
               </object>
             </child>
             <child>
               <object class="AdwSwitchRow" id="proxy_thaw_switch">
-                <property name="subtitle">&lt;b&gt;Thaw&lt;/b&gt; method call through proxy</property>
+                <property name="subtitle" translatable="yes" context="preference">&lt;b&gt;Thaw&lt;/b&gt; method call through proxy</property>
                 <property name="title" translatable="yes" context="preference">Thaw</property>
               </object>
             </child>
             <child>
-              <object class="AdwSwitchRow" id="proxy_enable_unit_file">
-                <property name="subtitle">&lt;b&gt;Enable&lt;/b&gt; or &lt;b&gt;Disable&lt;/b&gt; Unit file method call through proxy</property>
+              <object class="AdwSwitchRow" id="proxy_enable_unit_file_switch">
+                <property name="subtitle" translatable="yes" context="preference">&lt;b&gt;Enable&lt;/b&gt; Unit file method call through proxy</property>
                 <property name="title" translatable="yes" context="preference">Enable Unit File</property>
+              </object>
+            </child>
+            <child>
+              <object class="AdwSwitchRow" id="proxy_disable_unit_file_switch">
+                <property name="subtitle" translatable="yes" context="preference">&lt;b&gt;Disable&lt;/b&gt; Unit file method call through proxy</property>
+                <property name="title" translatable="yes" context="preference">Disable Unit File</property>
+              </object>
+            </child>
+            <child>
+              <object class="AdwSwitchRow" id="proxy_reload_daemon_switch">
+                <property name="subtitle" translatable="yes" context="preference">Reload the systemd manager configuration</property>
+                <property name="title" translatable="yes" context="preference">Reload Daemon</property>
               </object>
             </child>
           </object>
         </child>
         <child>
           <object class="AdwPreferencesGroup">
-            <property name="title">Actions</property>
+            <property name="title" translatable="yes" context="preference">Actions</property>
             <child>
               <object class="AdwSwitchRow" id="proxy_create_dropin_switch">
-                <property name="subtitle">Create a &lt;b&gt;Drop-in&lt;/b&gt; file through the proxy</property>
+                <property name="subtitle" translatable="yes" context="preference">Create a &lt;b&gt;Drop-in&lt;/b&gt; file through the proxy</property>
                 <property name="title" translatable="yes" context="preference">Create Drop-in</property>
               </object>
             </child>
             <child>
               <object class="AdwSwitchRow" id="proxy_save_file_switch">
-                <property name="subtitle">&lt;b&gt;Save file&lt;/b&gt; through the proxy</property>
+                <property name="subtitle" translatable="yes" context="preference">&lt;b&gt;Save file&lt;/b&gt; through the proxy</property>
                 <property name="title" translatable="yes" context="preference">Save file</property>
+              </object>
+            </child>
+            <child>
+              <object class="AdwSwitchRow" id="proxy_revert_unit_file_switch">
+                <property name="subtitle" translatable="yes" context="preference">Revert unit files to their vendor versions</property>
+                <property name="title" translatable="yes" context="preference">Revert Unit Files</property>
               </object>
             </child>
           </object>
@@ -251,16 +269,16 @@ You can set the application's Dbus level to &lt;u&gt;System&lt;/u&gt; if you wan
         <child>
           <object class="AdwPreferencesGroup">
             <property name="separate-rows">True</property>
-            <property name="title">Proxy Behaviors</property>
+            <property name="title" translatable="yes" context="preference">Proxy Behaviors</property>
             <child>
-              <object class="AdwSwitchRow" id="start_proxy_at_startup">
+              <object class="AdwSwitchRow" id="start_proxy_at_startup_switch">
                 <property name="subtitle" translatable="yes">Start the Proxy when starting Sysd Manager </property>
                 <property name="title" translatable="yes" context="preference">Start Proxy at Start up</property>
               </object>
             </child>
             <child>
-              <object class="AdwSwitchRow" id="stop_proxy_at_close">
-                <property name="subtitle">Stop the Proxy when closing Sysd Manager</property>
+              <object class="AdwSwitchRow" id="stop_proxy_at_close_switch">
+                <property name="subtitle" translatable="yes" context="preference">Stop the Proxy when closing Sysd Manager</property>
                 <property name="title" translatable="yes" context="preference">Stop Proxy at Close</property>
               </object>
             </child>
