--- a/data/interfaces/app_window.ui
+++ b/data/interfaces/app_window.ui
@@ -98,6 +98,11 @@
                 <child type="start">
                   <object class="GtkDropDown" id="system_session_dropdown"/>
                 </child>
+                <child>
+                  <object class="GtkDropDown" id="unit_list_view_dropdown">
+                    <property name="visible">False</property>
+                  </object>
+                </child>
               </object>
             </child>
           </object>
