--- a/data/interfaces/shortcuts.ui
+++ b/data/interfaces/shortcuts.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Created with Cambalache 0.96.1 -->
+<!-- Created with Cambalache 0.96.3 -->
 <interface>
   <!-- interface-name shortcuts.ui -->
   <requires lib="gtk" version="4.6"/>
@@ -80,6 +80,54 @@
               <object class="GtkShortcutsShortcut">
                 <property name="action-name">app.unit_properties</property>
                 <property name="title" translatable="yes" context="shortcut window">Show unit properties</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="action-name">win.save-unit-file</property>
+                <property name="title" translatable="yes" context="shortcut window">Save unit file</property>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child>
+          <object class="GtkShortcutsGroup">
+            <property name="title" translatable="yes" context="shortcut window" comments="Section name">Curated Lists</property>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="action-name">win.unit_list_view::default</property>
+                <property name="subtitle" translatable="yes" context="shortcut window" comments="subtitle">Merge Loaded Units with Unit Files</property>
+                <property name="title" translatable="yes" context="shortcut window">Display Sysd Manager Original List</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="action-name">win.unit_list_view::loaded</property>
+                <property name="title" translatable="yes" context="shortcut window">Display Loaded Units</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="action-name">win.unit_list_view::unit_file</property>
+                <property name="title" translatable="yes" context="shortcut window">Display Unit Files</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="action-name">win.unit_list_view::timers</property>
+                <property name="title" translatable="yes" context="shortcut window">Display Timers</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="action-name">win.unit_list_view::sockets</property>
+                <property name="title" translatable="yes" context="shortcut window">Display Sockets</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="action-name">win.unit_list_view::custom</property>
+                <property name="title" translatable="yes" context="shortcut window">Display User Customised Units list</property>
               </object>
             </child>
           </object>
