--- a/data/interfaces/unit_file_panel.ui
+++ b/data/interfaces/unit_file_panel.ui
@@ -62,6 +62,7 @@
                             <property name="valign">baseline-center</property>
                           </object>
                         </property>
+                        <property name="css-classes">suggested-action</property>
                       </object>
                     </child>
                   </object>
