--- a/data/interfaces/shortcuts.ui
+++ b/data/interfaces/shortcuts.ui
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Cambalache 0.96.3 -->
 <interface>
   <!-- interface-name shortcuts.ui -->
@@ -97,7 +97,7 @@
               <object class="GtkShortcutsShortcut">
                 <property name="action-name">win.unit_list_view::default</property>
                 <property name="subtitle" translatable="yes" context="shortcut window" comments="subtitle">Merge Loaded Units with Unit Files</property>
-                <property name="title" translatable="yes" context="shortcut window">Display Sysd Manager Original List</property>
+                <property name="title" translatable="yes" context="shortcut window">Display SysD Manager Original List</property>
               </object>
             </child>
             <child>
