--- a/data/interfaces/journal_panel.ui
+++ b/data/interfaces/journal_panel.ui
@@ -146,9 +146,14 @@
           <object class="AdwViewStackPage">
             <property name="child">
               <object class="AdwStatusPage">
-                <property name="description" translatable="yes" context="journal" comments="description">No journal events!
-It can be a good thing. 😉</property>
-                <property name="icon-name">dialog-question</property>
+                <property name="child">
+                  <object class="GtkLinkButton">
+                    <property name="label" translatable="yes" context="journal" comments="wiki link">For more information</property>
+                    <property name="uri">https://github.com/plrigaux/sysd-manager/wiki/Journal</property>
+                  </object>
+                </property>
+                <property name="description" translatable="yes" context="journal" comments="description">Either there are no log events to display, or you don't have permission to access them.</property>
+                <property name="icon-name">dialog-question-symbolic</property>
                 <property name="title" translatable="yes" context="journal" comments="title">No journal events</property>
               </object>
             </property>
