--- a/data/interfaces/app_window.ui
+++ b/data/interfaces/app_window.ui
@@ -102,6 +102,7 @@
                 </child>
                 <child>
                   <object class="GtkMenuButton" id="unit_list_view_menubutton">
+                    <property name="direction">left</property>
                     <property name="label" translatable="yes" context="menu" comments="selector of differents units list">Curated Lists</property>
                   </object>
                 </child>
