--- a/data/interfaces/unit_pop_menu.ui
+++ b/data/interfaces/unit_pop_menu.ui
@@ -138,6 +138,11 @@
             <signal name="clicked" handler="totals_summary_clicked" swapped="yes"/>
           </object>
         </child>
+        <child>
+          <object class="GtkMenuButton" id="unit_list_view_menubutton">
+            <property name="label">Curated Lists</property>
+          </object>
+        </child>
       </object>
     </property>
     <property name="position">right</property>
